--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 <body>
- <h1><center>This is My First Docker Website Hosted on  Ubuntu </center><h1>
+ <h1><center>This is My First Docker site Hosted on  Ubuntu </center><h1>
    
     <a href="Login.html">Login page</a> 
 </body>
